<resources>
    <string name="app_name">BC Companion</string>
    <string name="student_id">Student ID</string>
    <string name="map">Map</string>
    <string name="class_schedule">Class Schedule</string>
    <string name="course_history">Course History</string>
    <string name="event_calendar">Event Calendar</string>
    <string name="online_resources">Online Resources</string>
    <string name="student_name">Student Name</string>
    <string name="student_id_barcode">Student ID Barcode</string>
    <string name="student_email">Student Email</string>
    <string name="settings">Settings</string>
    <string name="student_info">Student Info</string>
    <string name="avatar">Avatar</string>
    <string name="edit">Edit</string>

    <string name="student_id_hint">\12345678</string>
    <string name="student_name_hint">John Doe</string>
    <string name="student_email_hint">john.doe1234</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>

    <string name="student_info_key">student_info</string>
    <string name="student_id_key">student_id</string>
    <string name="student_name_key">student_name</string>
    <string name="student_email_key">student_email</string>
</resources>